# k-means

./: .devcontainer.json  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
data/: dataset-10000.10.kmeans.txt  dataset-10000.txt  dataset-100000.10.kmeans.txt  dataset-100000.txt  dataset-1000000.10.kmeans.txt  dataset-1000000.txt  dataset-10000000.10.kmeans.txt  dataset-10000000.txt  dataset-5000000.10.kmeans.txt  dataset-5000000.txt  experiment_avg.csv  experiment_raw.csv
scripts/: exp.py
src/: kmeans.cpp  kmeans_par1.cpp  kmeans_par1_1.cpp  kmeans_par1_2.cpp  kmeans_par1_3.cpp  kmeans_parakmeans.cpp  kmeans_seq.cpp  kmeans_ver3.cpp  parakmeans.cpp
src/utils/: kmeans_helper.h  parse_args.cpp  parse_args.h  parse_input.cpp  parse_input.h
